Serialize the text-decoration shorthand

The shorthand text-decoration should be accessible and correctly
serialized on the computed style of an element. Without this
implementation, the CSS code would default serialize those values only
into the longhand forms.

TEST=fast/css3-text/css3-text-decoration/text-decoration-shorthand.html
BUG=613451

Review-Url: https://codereview.chromium.org/2494963003
Cr-Commit-Position: refs/heads/master@{#431853}

Former-commit-id: 05bbe1b2538e2f9722f0e9881e70e24b7e264c63